Fix output reference

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -910,7 +910,7 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
-        SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+        SourceSecurityGroupId1: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
