--- a/stacks/provisioned/feeder.yml
+++ b/stacks/provisioned/feeder.yml
@@ -176,11 +176,10 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: !Sub >-
-        The main security group for the ${EnvironmentType} Feeder ALB, and
-        only the ALB should belong to this group. Controls inbound
-        (i.e., internet) traffic to the ALB, and traffic from the ALB to its
-        EC2 instances and ECS container instances. By default, allows all HTTP
-        and HTTPS inbound traffic.
+        Security group for the ${EnvironmentType} Feeder ALB. Only the ALB
+        should belong to it. Controls traffic into the ALB (i.e., internet) and
+        from the ALB to targets (EC2 instances, etc), By default, allows all
+        HTTP inbound traffic.
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           FromPort: 80
