Add domain output

--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -573,3 +573,10 @@ Resources:
         - { Key: prx:dev:application, Value: Router } # TODO
       TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-legacy.yml
       TimeoutInMinutes: 20
+
+Outputs:
+  VanityAlbDomain:
+    Description: >-
+      The vanity wildcard domain configured for the ALB's certificate, and
+      registered in the DNS hosted zone
+    Value: !GetAtt Constants.VanityAlbDomain
