Add target group name tags

--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -74,6 +74,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "15"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_remix" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
