--- a/stacks/provisioned/augury.yml
+++ b/stacks/provisioned/augury.yml
@@ -73,6 +73,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "30"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_augury" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
