--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -63,6 +63,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "30"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_cms" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
