--- a/stacks/provisioned/dovetail-legacy.yml
+++ b/stacks/provisioned/dovetail-legacy.yml
@@ -55,6 +55,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "20"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_dovetail_legacy" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
