--- a/stacks/provisioned/metrics.yml
+++ b/stacks/provisioned/metrics.yml
@@ -58,6 +58,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "15"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_metrics" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
