--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -89,7 +89,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "30"
       Tags:
-        - { Key: Name, Value: !Sub "${RootStackName}_exchange" }
+        - { Key: Name, Value: !Sub "${RootStackName}_networks" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
