Make Styleguide staging-only

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -83,6 +83,9 @@ Parameters:
   FeederEcrImageTag: { Type: String }
   FeederSecretsVersion: { Type: String }
 
+Conditions:
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
+
 Resources:
   AuguryStack:
     Type: AWS::CloudFormation::Stack
@@ -546,6 +549,7 @@ Resources:
 
   StyleguideStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
