--- a/stacks/shared-vpc/private-subnets.yml
+++ b/stacks/shared-vpc/private-subnets.yml
@@ -20,7 +20,9 @@ Resources:
     Properties:
       ServiceToken: !Ref AvailabilityZoneSelectorServiceToken
 
-  # Routing for private subnets
+  # Routing for private subnets. A subnet being associated with this route
+  # table is what makes it a private subnet, since there is no internet gateway
+  # associated with the route table.
   PrivateRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
