--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -514,8 +514,8 @@ Resources:
               Value: !Ref kSphinxPort
             - Name: SPHINX_BASE_URL
               Value: !GetAtt Constants.SphinxBaseUrl
-            # - Name: LOCAL_SPHINX
-            #   Value: "true"
+            - Name: LOCAL_SPHINX
+              Value: "true"
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
           LogConfiguration:
