Add ALB outputs

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -576,3 +576,9 @@ Resources:
         - { Key: prx:dev:application, Value: Styleguide }
       TemplateURL: !Sub ${TemplateUrlPrefix}/styleguide.yml
       TimeoutInMinutes: 20
+
+Outputs:
+  FeederVanityAlbDomain:
+    Value: !GetAtt FeederStack.Outputs.VanityAlbDomain
+  DovetailVanityAlbDomain:
+    Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
