--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1053,3 +1053,8 @@ Outputs:
     Condition: IsStaging # TODO
     Description: The resource ID for the shared VPC
     Value: !GetAtt SharedVpcStack.Outputs.VpcId
+
+  FeederVanityAlbDomain:
+    Value: !GetAtt ProvisionedStack.Outputs.FeederVanityAlbDomain
+  DovetailVanityAlbDomain:
+    Value: !GetAtt ProvisionedStack.Outputs.DovetailVanityAlbDomain
